--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,3 @@
-/*Tamanho e Estilo de Fonte*/
-html{
-	font-size: 20px;
-	font-family: Helvetica, Arial, Sans-Serif;
-}
-
 /* configuração navegação topo*/
 .navegacaoTopo a span:hover{
 	border-bottom: 2px solid red;
@@ -15,8 +9,46 @@ html{
 	color: black;
 }
 
-/*Tamanho da pagina*/
-html, body #home {
+html, body, #home {
+	margin: 0;
+  	padding: 0;
 	height: 100%;
 	overflow-x: hidden;
+}
+
+html, body{
+	font-family: Helvetica,Arial,sans-serif;
+}
+
+/* Rodapé
+-----------------------------*/
+footer {
+	background: #000;
+	padding: 30px 0px 30px 0px;
+	position: relative;
+}
+
+footer h4, h6{
+	color: #0d47a1;
+	font-size: 0.8em;
+	text-transform: uppercase;
+	padding: 10px 0px 10px 0px;
+}
+
+footer p {
+	color: #757575;
+	font-size: 0.8em;
+	text-transform: uppercase;
+	padding: 5px 0px 5px 0px;
+}
+
+footer .container a {
+	color: #757575;
+	font-size: 0.8em;
+	padding: 5px 0px 5px 0px;
+	text-decoration: none;
+}
+
+footer .container a:hover {
+	color: #64b5f6;
 }
