--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,7 +59,7 @@ footer .container a:hover {
 }
 /*fim do rodapé*/
 
-/*congiruação pagina contato*/
+/*configuração pagina contato*/
 #contato hr{
 	border: 1px solid #b71c1c; 
 }
@@ -67,3 +67,70 @@ footer .container a:hover {
 #contato h1,p{
 	padding: 5px 0px 5px 0px;
 }
+/*fim configuração pagina contato*/
+
+/*inicio configuração pagina escola*/
+body #escola{
+	height: 100%;
+}
+
+#escola h1{
+	border-bottom: 2px solid #ef5350;
+	padding: 10px 0px 10px 0px;
+}
+.caixa1, .caixa2, .caixa3{
+	position: relative;
+	height: 100%;
+	opacity: 0.7;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed; 
+}
+
+.caixa1 {
+	background-image: url(../Imagem/História/inicioEtec.jpg);
+}
+
+.caixa2 {
+	background-image: url(../Imagem/História/durante.jpg);
+}
+
+.caixa3 {
+	background-image: url(../Imagem/História/atual.jpg);
+}
+
+.conteudo-titulo {
+	position: absolute;
+	left: 0;
+	top: 45%;
+	width: 100%;
+	text-align: center;
+}
+
+.conteudo-titulo span.titulo {
+	color: #fff;
+	background-color: #111;
+	padding: 18px;
+	font-size: 25px;
+	letter-spacing: 5px;
+	text-transform: uppercase;
+}
+
+.conteudo {
+	color: #777;
+	background-color: white;
+	text-align: justify;
+	padding: 50px 80px;
+}
+
+.conteudo-titulo span.titulo {
+	color: #fff;
+	background-color: #111;
+	padding: 18px;
+	font-size: 25px;
+	letter-spacing: 5px;
+	text-transform: uppercase;
+}
+
+/*fim configuração pagina escola*/
