--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,6 +77,7 @@ body #escola{
 #escola h1{
 	border-bottom: 2px solid #ef5350;
 	padding: 10px 0px 10px 0px;
+	margin-left: 10px;
 }
 .caixa1, .caixa2, .caixa3{
 	position: relative;
@@ -134,3 +135,15 @@ body #escola{
 }
 
 /*fim configuração pagina escola*/
+
+/*Configuração secretaria*/
+.diretoriaAcademica h2{
+	padding: 40px 0px 40px 0px; 
+}
+
+.diretoriaAcademica hr{
+	border: 1px solid #ef5350;
+}
+
+
+/*Fim configuração secretaria*/
