--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,6 +2,8 @@
 .navegacaoTopo a span:hover{
 	border-bottom: 2px solid red;
 }
+
+
 /*fim configuração navegação topo*/
 
 /*configuração carrossel*/
@@ -21,6 +23,7 @@ html, body, #home {
 
 html, body{
 	font-family: Helvetica,Arial,sans-serif;
+	font-size: 20px;
 }
 
 /*fim de configuração do corpo do site*/
@@ -29,6 +32,7 @@ html, body{
 -----------------------------*/
 footer {
 	background: #000;
+	font-size: 0.8em;
 	padding: 30px 0px 30px 0px;
 	position: relative;
 }
@@ -156,4 +160,12 @@ body #escola{
 	text-decoration: none;
 }
 /*fim configuração pagina diretoria servicos*/
+
+
+/*configurando sessão cursos na area principal*/
+#cursos p{
+	font-size: 0.68em;
+}
+
+/*fim configurando sessão cursos na area principal*/
 
