--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,6 +21,10 @@ html, body, #home {
 	overflow-x: hidden;
 }
 
+section{
+	padding: 5px;
+}
+
 html, body{
 	font-family: Helvetica,Arial,sans-serif;
 	font-size: 20px;
@@ -168,4 +172,55 @@ body #escola{
 }
 
 /*fim configurando sessão cursos na area principal*/
+
+
+/*inicio configuração pagina apm*/
+.flip-container {
+	perspective: 500px;
+}
+/* flip the pane when hovered */
+
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: 250px;
+	height: 250px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 10;
+	left: 10;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+	padding: 10px;
+	border: 1px solid black;
+}
+
+.back p{
+	font-size: 0.7em;
+}
+
+/*fim configuração pagina apm*/
 
